Add historical patient data and top films dataset
- Created a new JSON file `historico_pacientes_norm.json` containing normalized historical patient data with various health metrics.
- Added an HTML file `top_filmes.html` that presents a table of top films, including details such as release year, director, production companies, and rank.
- Introduced a CSV file `top_filmes_1998` listing the same top films in a comma-separated format for easier data manipulation and analysis.

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,10 @@ xgboost
 lightgbm
 catboost
 imbalanced-learn
+html5lib 
+beautifulsoup4
+lxml
+sqlalchemy
 
 # ======================================
 # Data Visualization / Dashboards
@@ -40,6 +44,7 @@ ipywidgets
 tqdm
 joblib
 requests
+chardet
 
 # ======================================
 # Natural Language Processing
